@@ -215,7 +215,7 @@ public class ValuedDataObjectWithExtensionsConverterTest extends AbstractConvert
         Map<String, List<ExtensionElement>> extensionElements = dataObj.getExtensionElements();
 
         if (!extensionElements.isEmpty()) {
-            return extensionElements.get(key).get(0).getElementText();
+            return extensionElements.get(key).getFirst().getElementText();
         }
         return null;
     }
@@ -224,7 +224,7 @@ public class ValuedDataObjectWithExtensionsConverterTest extends AbstractConvert
         Map<String, List<ExtensionElement>> extensionElements = dataObj.getExtensionElements();
 
         if (!extensionElements.isEmpty()) {
-            return extensionElements.get(key).get(0);
+            return extensionElements.get(key).getFirst();
         }
         return null;
     }
@@ -238,7 +238,7 @@ public class ValuedDataObjectWithExtensionsConverterTest extends AbstractConvert
             if (null != attributesExtension && !attributesExtension.isEmpty()) {
                 attributes = new HashMap<String, String>();
                 List<ExtensionElement> attributeExtensions = attributesExtension
-                    .get(0)
+                    .getFirst()
                     .getChildElements()
                     .get(ELEMENT_DATA_ATTRIBUTE);
 
@@ -257,18 +257,18 @@ public class ValuedDataObjectWithExtensionsConverterTest extends AbstractConvert
         List<ExtensionElement> i18lnExtension = dObj.getExtensionElements().get(ELEMENT_I18LN_LOCALIZATION);
 
         if (!i18lnExtension.isEmpty()) {
-            Map<String, List<ExtensionAttribute>> extensionAttributes = i18lnExtension.get(0).getAttributes();
+            Map<String, List<ExtensionAttribute>> extensionAttributes = i18lnExtension.getFirst().getAttributes();
             localization.setLabeledEntityIdForName(
-                extensionAttributes.get(ATTRIBUTE_DATA_LABELED_ENTITY_ID_FOR_NAME).get(0).getValue()
+                extensionAttributes.get(ATTRIBUTE_DATA_LABELED_ENTITY_ID_FOR_NAME).getFirst().getValue()
             );
             localization.setLabeledEntityIdForDescription(
-                extensionAttributes.get(ATTRIBUTE_DATA_LABELED_ENTITY_ID_FOR_DESCRIPTION).get(0).getValue()
+                extensionAttributes.get(ATTRIBUTE_DATA_LABELED_ENTITY_ID_FOR_DESCRIPTION).getFirst().getValue()
             );
             localization.setResourceBundleKeyForName(
-                extensionAttributes.get(ATTRIBUTE_DATA_RESOURCE_BUNDLE_KEY_FOR_NAME).get(0).getValue()
+                extensionAttributes.get(ATTRIBUTE_DATA_RESOURCE_BUNDLE_KEY_FOR_NAME).getFirst().getValue()
             );
             localization.setResourceBundleKeyForDescription(
-                extensionAttributes.get(ATTRIBUTE_DATA_RESOURCE_BUNDLE_KEY_FOR_DESCRIPTION).get(0).getValue()
+                extensionAttributes.get(ATTRIBUTE_DATA_RESOURCE_BUNDLE_KEY_FOR_DESCRIPTION).getFirst().getValue()
             );
         }
         return localization;
