@@ -410,7 +410,7 @@ public class DbSqlSession implements Session {
         if (loadedObjects.isEmpty()) {
             return loadedObjects;
         }
-        if (!(loadedObjects.get(0) instanceof Entity)) {
+        if (!(loadedObjects.getFirst() instanceof Entity)) {
             return loadedObjects;
         }
 
@@ -641,7 +641,7 @@ public class DbSqlSession implements Session {
                     if (parentBeforeChildExecution) {
                         result.add(executionEntities.get(parentId));
                     } else {
-                        result.add(0, executionEntities.get(parentId));
+                        result.addFirst(executionEntities.get(parentId));
                     }
                 }
 
@@ -676,7 +676,7 @@ public class DbSqlSession implements Session {
             if (parentBeforeChildExecution) {
                 result.add(childExecutionEntity);
             } else {
-                result.add(0, childExecutionEntity);
+                result.addFirst(childExecutionEntity);
             }
 
             collectChildExecutionsForInsertion(
