@@ -48,14 +48,14 @@ public class FlowNodeInSubProcessConverterTest extends AbstractConverterTest {
         List<SequenceFlow> sequenceFlows = gateway.getOutgoingFlows();
         assertThat(sequenceFlows.size() == 2).isTrue();
         assertThat(
-            sequenceFlows.get(0).getId().equals("sid-9C669980-C274-4A48-BF7F-B9C5CA577DD2") ||
-            sequenceFlows.get(0).getId().equals("sid-A299B987-396F-46CA-8D63-85991FBFCE6E")
+            sequenceFlows.getFirst().getId().equals("sid-9C669980-C274-4A48-BF7F-B9C5CA577DD2") ||
+            sequenceFlows.getFirst().getId().equals("sid-A299B987-396F-46CA-8D63-85991FBFCE6E")
         ).isTrue();
         assertThat(
             sequenceFlows.get(1).getId().equals("sid-9C669980-C274-4A48-BF7F-B9C5CA577DD2") ||
             sequenceFlows.get(1).getId().equals("sid-A299B987-396F-46CA-8D63-85991FBFCE6E")
         ).isTrue();
-        assertThat(sequenceFlows.get(0).getSourceRef().equals("sid-A0E0B174-36DF-4C4F-A952-311CC3C031FC")).isTrue();
+        assertThat(sequenceFlows.getFirst().getSourceRef().equals("sid-A0E0B174-36DF-4C4F-A952-311CC3C031FC")).isTrue();
         assertThat(sequenceFlows.get(1).getSourceRef().equals("sid-A0E0B174-36DF-4C4F-A952-311CC3C031FC")).isTrue();
     }
 
