@@ -65,7 +65,7 @@ public class TaskRuntimeFormKeyTest {
 
         Page<Task> tasks = taskRuntime.tasks(Pageable.of(0, 50));
         assertThat(tasks.getContent()).hasSize(1);
-        Task task = tasks.getContent().get(0);
+        Task task = tasks.getContent().getFirst();
 
         assertThat(task.getFormKey()).isEqualTo("aFormKey");
 
@@ -79,7 +79,7 @@ public class TaskRuntimeFormKeyTest {
 
         Page<Task> tasks = taskRuntime.tasks(Pageable.of(0, 50));
         assertThat(tasks.getContent()).hasSize(1);
-        Task task = tasks.getContent().get(0);
+        Task task = tasks.getContent().getFirst();
 
         taskRuntime.update(new UpdateTaskPayloadBuilder().withTaskId(task.getId()).withFormKey("aFormKey").build());
 
@@ -100,7 +100,7 @@ public class TaskRuntimeFormKeyTest {
         Page<Task> tasks = taskRuntime.tasks(Pageable.of(0, 50));
 
         assertThat(tasks.getContent()).hasSize(1);
-        Task task = tasks.getContent().get(0);
+        Task task = tasks.getContent().getFirst();
 
         assertThat(task.getFormKey()).isEqualTo("taskForm");
         assertThat(task.getTaskDefinitionKey()).isEqualTo("Task_03l0zc2");
