@@ -89,7 +89,7 @@ public class BasicParallelGatewayTest {
 
         assertThat(tasks.getTotalItems()).isEqualTo(1);
 
-        Task task = tasks.getContent().get(0);
+        Task task = tasks.getContent().getFirst();
 
         Task taskById = taskRuntime.task(task.getId());
 
@@ -143,7 +143,7 @@ public class BasicParallelGatewayTest {
 
         assertThat(tasks.getTotalItems()).isEqualTo(1);
 
-        task = tasks.getContent().get(0);
+        task = tasks.getContent().getFirst();
 
         taskById = taskRuntime.task(task.getId());
 
@@ -160,7 +160,7 @@ public class BasicParallelGatewayTest {
 
         assertThat(tasks.getTotalItems()).isEqualTo(1);
 
-        task = tasks.getContent().get(0);
+        task = tasks.getContent().getFirst();
 
         taskById = taskRuntime.task(task.getId());
 
